# nx1-sdk

./: AGENTS.md  LICENSE  README.md  catalog-info.yaml  mkdocs.yml  pyproject.toml
.claude/skills/audit-security/: SKILL.md
.claude/skills/check-deps/: SKILL.md
.claude/skills/pr-summary/: SKILL.md
.github/workflows/: app_deployment.yml
.nx1/: devbox.yaml
artifacts/: artifact1.py
dags/: dag_sample_example.py
src/nx1_sdk/: __init__.py  base.py  cli.py  client.py  constants.py  enums.py  exceptions.py  profiles.py  services.py  transformations.py
src/nx1_sdk/services/: airflow_trigger_service.py  jupyterhub_services.py  kyuubi_service.py  nx1_service.py  superset_service.py
tests/: test_sdk.py
