[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nx1-sdk"
version = "1.0.0"
description = "Comprehensive Python SDK for the NX1 NLP Agent API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NX1 Team", email = "support@nx1cloud.com"}
]
keywords = [
    "nx1",
    "nlp",
    "data-engineering",
    "data-ingestion",
    "lakehouse",
    "sdk",
    "api-client"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
nx1 = "nx1_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/nx1/nx1-sdk-python"
Documentation = "https://docs.nx1cloud.com/sdk"
Repository = "https://github.com/nx1/nx1-sdk-python"
Issues = "https://github.com/nx1/nx1-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nx1_sdk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=nx1_sdk --cov-report=term-missing"
